--- a/e-Book/Properties/launchSettings.json
+++ b/e-Book/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62172",
-      "sslPort": 44327
+      "applicationUrl": "http://localhost:62172"
+      //"sslPort": 44327
     }
   },
   "profiles": {
